gl31-master/src/test/deca/syntax/invalid/complet/expr_missing.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, expr. manquante après '='
//
// Historique:
//    cree le 18/01/2021
class Test{
    protected int a = ;
}
